# raiment

./: LICENSE  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  idea.md  request-for-change--rfc-.md  request-for-change.md  task.md
.github/workflows/: build.yml  rust-build-and-test.yml
kiss3d/.git-external/: config  index  packed-refs
kiss3d/.git-external/logs/: HEAD
kiss3d/src/resource/: mod.rs  texture_manager.rs
sandbox/state-machine-00/: Cargo.toml
sandbox/state-machine-00/src/: main.rs
sandbox/state-machine-01/src/: main.rs
scripts/: archive_binary_version.js
voxel-00/: Cargo.toml  Makefile
voxel-01/: Makefile
voxel-01/src/: actor.rs  main.rs  occupation.rs  world.rs
voxel-01/src/occupations/: mindlessness.rs  mod.rs
voxel-02/: Cargo.toml  README.md
voxel-02/src/: actor.rs  main.rs  occupation.rs  world.rs
voxel-02/src/occupations/: avatar.rs  mindlessness.rs  mod.rs
voxel-02/src/tasks/: random_move.rs  wait.rs
voxel-03/src/: main.rs  world.rs
voxel-03/src/occupations/: avatar.rs  (+1 more)
voxel-04/: Cargo.toml  Makefile
voxel-04/src/: actor.rs  main.rs  occupation.rs  world.rs
voxel-05/: Cargo.toml  Makefile  README.md  package.json
voxel-05/src/: main.rs  occupation.rs
voxel-05/src/occupations/: farmer.rs  grow_plants.rs  house_builder.rs  mindlessness.rs  mod.rs
voxel-05/src/tasks/: random_move.rs
voxel-05/src/world/: tile.rs  world.rs  world_map.rs
voxel-06/: Cargo.toml  Makefile  README.md
voxel-06/src/: actor.rs  main.rs
voxel-main/: .gitignore
voxel-main/src/: actor.rs  main.rs  occupation.rs
(+37 files in other folders)
